--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="8dp"
@@ -9,47 +10,63 @@
     android:layout_margin="1dp"
     >
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="5dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="5dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Event"
             android:id="@+id/channel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textAlignment="center" />
+            android:layout_marginEnd="10dp"
+            android:text="channel"
+            android:textAlignment="textStart"
+            card_view:layout_constraintEnd_toStartOf="@+id/timestamp"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/event"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="ID"
-            android:id="@+id/event"
             android:layout_below="@+id/channel"
-            android:textAlignment="center" />
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="5dp"
+            android:text="event"
+            android:textAlignment="textStart"
+            android:textSize="12sp"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/channel" />
 
-        <com.github.curioustechizen.ago.RelativeTimeTextView
+        <TextView
             android:id="@+id/timestamp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/event"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_marginStart="10dp"
+            android:text="timestamp"
+            android:textAlignment="textEnd"
+            android:textSize="12sp"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toEndOf="@+id/channel"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Data"
-            android:id="@+id/data"
             android:layout_below="@+id/timestamp"
-            android:textAlignment="center"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="10dp"
+            android:text="Data"
+            android:textAlignment="textStart"
+            android:padding="5dp"
+            android:textSize="16sp"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintHorizontal_bias="0.5"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/event" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
