--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="10dp"
-            android:text="channel"
+            android:text=""
             android:textAlignment="textStart"
             card_view:layout_constraintEnd_toStartOf="@+id/timestamp"
             card_view:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
             android:layout_below="@+id/channel"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:text="event"
+            android:text=""
             android:textAlignment="textStart"
             android:textSize="12sp"
             card_view:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/event"
             android:layout_marginStart="10dp"
-            android:text="timestamp"
+            android:text=""
             android:textAlignment="textEnd"
             android:textSize="12sp"
             card_view:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/timestamp"
             android:layout_marginTop="10dp"
-            android:text="Data"
+            android:text=""
             android:textAlignment="textStart"
             android:padding="5dp"
             android:textSize="16sp"
